--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <script defer src="./app.js"></script> 
     <title>Bored</title>
 </head>
 <body>
     <div id="app" class="app"></div>
+    <script type="module" src="./app.js"></script> 
 </body>
 </html>
