Added shared functions containing module to the page body

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <body>
     <div id="app" class="app"></div>
     <script type="module" src="./app.js"></script> 
+    <script type="module" src="./assets/scripts/shared.js"></script>
 </body>
 </html>
