Created basic markup for the activity

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <title>Bored</title>
 </head>
 <body>
-    <div id="app" class="app"></div>
+    <div id="app" class="app">
+        <div class="activity">
+            <h1 id="activity__text" class="activity__text"></h1>
+            <h2 id="activity__type" class="activity__type"></h2>
+        </div>
+    </div>
     <script type="module" src="./app.js"></script> 
     <script type="module" src="./assets/scripts/shared.js"></script>
 </body>
