--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1 id="activity__text" class="activity__text"></h1>
             <h2 id="activity__type" class="activity__type"></h2>
         </div>
+        <p class="tip">Press space or click somewhere to go to the next activity.</p>
     </div>
     <script type="module" src="./app.js"></script> 
 </body>
